@@ -120,6 +120,17 @@ Pursuant to the terms of the LGPL, you may consider this code to fall
 under the GPL as part of the whole MissingH work.
 
 ----------------------------------------------------
+Portions if MissingH.Path come from Volker Wysk's HsShellScript
+library, version 2.1.0.  That code is Copyright (c) 2004 Volker Wysk
+and is licensed under the GNU LGPL 2.1
+
+Debian GNU/Linux users may find the GNU LGPL 2.1 at
+/usr/share/common-licenses/LGPL-2.1.  Alternatively, you may find it
+at 3rd-party-licenses/LGPL-2.1 in the source distribution.
+
+Pursuant to the terms of the LGPL, you may consider this code to fall
+under the GPL as part of the whole MissingH work.
+----------------------------------------------------
 MissingH.Checksum.CRC32.Posix is
 (C) 2002 HardCore SoftWare, Doug Hoyte
 and is "distributed under the terms of the GNU GPL."  This license is
